Fixed grid spacing for portfolio

--- a/main.css
+++ b/main.css
@@ -263,8 +263,10 @@ p {
 
 .grid-item--about--item-1{
   /* border: 1px solid red; */
-  /* display: flex;
-  justify-content: center; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .grid-item--about--item-2{
